# Nils

./: .travis.yml  CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  ExecutablePass.cpp  ExecutablePass.h  Job.cpp  Job.h  Nils.cpp  Nils.h  NilsFeedback.cpp  NilsFeedback.h  Pass.h  PassManager.cpp  PassManager.h  PassResult.cpp  PassResult.h  Process.cpp  Process.h  Utils.cpp  Utils.h
lib/NativePasses/: DeleteCharRangePass.cpp  DeleteCharRangePass.h  DeleteLinePass.cpp  DeleteLinePass.h  PassUtils.cpp  PassUtils.h  RemoveTokenPass.cpp  RemoveTokenPass.h  RenameTokenPass.cpp  RenameTokenPass.h
main/: CMakeLists.txt  main.cpp
passes/: DeleteFile.NilsPass  DropFirstLine.NilsPass  DropLastChar.NilsPass  DropLastLine.NilsPass  RemoveClassClang.NilsPass  RemoveCppComments.NilsPass  RemoveEmptyLines.NilsPass  RemoveLineClang.NilsPass  RemovePythonComments.NilsPass  clang-format.NilsPass  delete-file.NilsPass  remove-empty-lines.NilsPass
passes/utils/: removeClass.py  removeLine.py  trim.py
scripts/: run_tests.sh
test/: CMakeLists.txt  run.sh
test/BasicTest/: data  nils.sh
test/PythonBasic1/: nils.sh  prog.py
test/PythonBasic1.expected/: nils.sh  prog.py
test/RemoveFiles/: nils.sh
unittests/: CMakeLists.txt  PassUtilsTest.cpp  ShellCommandTest.cpp  UtilsTest.cpp
